Add more mentions of the subject complement marker

--- a/docs/language/sentences.mdx
+++ b/docs/language/sentences.mdx
@@ -162,6 +162,30 @@ has a nucleus in the middle of a phrase because
 [determiners](./word_types/determiners.mdx) go to the *left* of the nucleus and
 [adjectives](./word_types/modifiers.mdx) to the *right*.
 
+### Subject Complements & Existence
+
+The particle <HisyeoWord is='li'/> is a special preposition that marks a subject
+complement. It links a subject to a description (noun or modifier) or state.
+
+- **Not a Verb:** <HisyeoWord is='li'/> is a preposition, not a verb. It cannot take verb modifiers or be converted into a noun.
+- **Existential:** When no subject is provided, <HisyeoWord is='li'/> implies "There is" or "It is".
+
+<HisyeoTabs>
+    <p>li môtô.&emsp;<em>There is fire.</em></p>
+</HisyeoTabs>
+
+**The Copula:** The concept of existence/location (<HisyeoWord is='gô'/>) is
+treated as a noun concept, not a verb. Therefore, it requires li to function as
+a predicate.
+
+<HisyeoTabs>
+    <p>noyo (li gô) hoî niwos.&emsp;<em>I am [existing] at home.</em></p>
+</HisyeoTabs>
+
+**Continuous Description:** If a subject is already established in a previous
+clause, <HisyeoWord is='li'/> can be used to add further description without
+restating the subject.
+
 ## Sentence Types
 
 ### Simple
