--- a/docs/language/word_types/modifiers.mdx
+++ b/docs/language/word_types/modifiers.mdx
@@ -18,6 +18,21 @@ adjectives or adverbs.
 
 There are only a few prepositions applicable to the modifier class of words.
 
+### Subject Complement
+
+The <HisyeoWord is="li"/> particle precedes this modifier.
+
+This role is used when the modifier is describing the subject (an adjective
+complement), roughly equivalent to "is [adjective]" in English. When used
+without a subject, it implies "It is [adjective]" or "There is [quality]".
+
+<HisyeoTabs>
+    <p>ni li xôn.&emsp;<em>"It is good."</em></p>
+    <p>li cunyû.&emsp;<em>"It is cold." / "There is coldness."</em></p>
+</HisyeoTabs>
+
+
+
 ### Positive
 
 The <HisyeoWord is="in"/> particle allows you to specify that any content word
