--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -194,6 +194,20 @@ marked noun phrase is either excluded from being the recipient of the committed
 act of the predicate or that the act itself was committed but with recipient
 that is something other than the marked noun phrase.
 
+### Subject Complement
+
+The <HisyeoWord is='li'/> particle precedes this noun phrase.
+
+This role is used when the noun is describing the subject (a noun complement), roughly equivalent to "is a [noun]" in English.
+
+Because <HisyeoWord is='li'/> is a preposition, if it is used without an explicit subject, it creates an existential statement ("There is [noun]").
+
+<HisyeoTabs>
+  <p>noyo li ônî bêûdo.&emsp;<em>I am a student.</em></p>
+  <p>li môtô.&emsp;<em>There is fire.</em></p>
+  <p>li gô hoî niwos.&emsp;<em>(It) is at home.</em></p>
+</HisyeoTabs>
+
 ### Source or Origin
 
 The <HisyeoWord is='sûn'/> particle precedes this noun phrase.
