--- a/docs/language/word_types/verbs.mdx
+++ b/docs/language/word_types/verbs.mdx
@@ -265,6 +265,13 @@ A noun cannot act as a verb, it must be provided with the subject complement
 marker (<HisyeoWord is='li'/>). This is called a **noun complement**. The subject is being described as
 being some noun. This has the effect of meaning "is a [noun]" in English.
 
+:::info Usage with Copula
+
+The base copula word <HisyeoWord is='gô'/> is technically a noun concept
+(existence/presence). Therefore, it requires <HisyeoWord is='li'/> to function
+as a predicate.
+
+:::
 
 ### Modifiers
 
@@ -272,6 +279,12 @@ A modifier cannot act as a verb, it must be provided with the subject complement
 marker (<HisyeoWord is='li'/>). This is called an **adjective complement**. The
 subject is being described as being some adjective (in some state). This has the
 effect of meaning "is [adjective]" in English.
+
+:::warning Not a Verb
+
+Because <HisyeoWord is='li'/> is a preposition and not a verb, it cannot be converted into a noun or modifier itself.
+
+:::
 
 ## Verb Modifiers
 
