Add missing allophony rule

--- a/docs/language/phonology.mdx
+++ b/docs/language/phonology.mdx
@@ -57,6 +57,7 @@ representations too.
   and the onsets can become voiceless [y̥ w̥]
 - When coda-/t/ is preceding /s/, then it can be realized as an affricate [ʦ]
 - When coda-/t͡ʃ/ is preceding /t d n/, it can become a simpler fricative [ʃ ɕ].
+- When coda-/l/ is preceding /y/, it can become a voiced palatal lateral approximant [ʎ].
 - The coda-/s/ is often realized as [z] in word final position
 - The /h/ is often realized as [ç] when preceding /i/ or /u/ vowels.
 
