fix incorrect word

--- a/docs/lessons/getting-directions.mdx
+++ b/docs/lessons/getting-directions.mdx
@@ -32,7 +32,7 @@ the **Radial Prepositions** (In/Before vs. On/After).
 | East       | <HisyeoWord is='kilukû'/>    | Eastern                            |
 | West       | <HisyeoWord is='fîtîkôs'/>   | Western                            |
 | Left       | <HisyeoWord is='xîmol'/>     |                                    |
-| Right      | <HisyeoWord is='yûkwoî'/>    |                                    |
+| Right      | <HisyeoWord is='sotnîn'/>    |                                    |
 
 ## Major Landmarks
 
