Add biology and update math a bit

--- a/docs/sciences/mathematics.mdx
+++ b/docs/sciences/mathematics.mdx
@@ -14,129 +14,40 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Mathematics, or sôhoûk, is considered the language of the First Law—the underlying logic of the universe before the Shattering. It is the study of quantity, structure, and change.
 
-Basic Vocabulary
+## Basic Vocabulary
 
-English
+| English     | Hîsyêô       | Literal Meaning  |
+|-------------|--------------|------------------|
+| Number      | tûek         | Count / Number   |
+| Zero        | xûnyu        | Void / Nothing   |
+| Infinity    | môî          | All / Everything |
+| Equation    | wofok sôhoûk | Logic agreement  |
+| Shape       | xîncûon      | Form / Shape     |
+| Measurement | dûstu        | Measure / Degree |
 
-Hîsyêô
-
-Literal Meaning
-
-Number
-
-tûek
-
-Count / Number
-
-Zero
-
-xûnyu
-
-Void / Nothing
-
-Infinity
-
-môî
-
-All / Everything
-
-Equation
-
-wofok sôhoûk
-
-Logic agreement
-
-Shape
-
-xîncûon
-
-Form / Shape
-
-Measurement
-
-dûstu
-
-Measure / Degree
-
-Operations
+## Operations
 
 Operations are often expressed using prepositions or specific verbs.
 
-Operation
+| Operation        | Hîsyêô       | Example (2 + 2 = 4)                               |
+|------------------|--------------|---------------------------------------------------|
+| Plus (Add)       | ûn (and)     | Dûî ûn dûî li nonkû.                              |
+| Minus (Subtract) | sûn (from)   | Dûî sûn nonkû li dûî. (Two from four is two).     |
+| Times (Multiply) | xokôn (each) | Dûî xokôn dûî li nonkû. (Two each two is four).   |
+| Divide           | fun (part)   | Dûî fun nonkû li dûî. (Two parts of four is two). |
+| Equals           | li (is)      |                                                   |
 
-Hîsyêô
-
-Example (2 + 2 = 4)
-
-Plus (Add)
-
-ûn (and)
-
-Dûî ûn dûî li nonkû.
-
-Minus (Subtract)
-
-sûn (from)
-
-Dûî sûn nonkû li dûî. (Two from four is two).
-
-Times (Multiply)
-
-xokôn (each)
-
-Dûî xokôn dûî li nonkû. (Two each two is four).
-
-Divide
-
-fun (part)
-
-Dûî fun nonkû li dûî. (Two parts of four is two).
-
-Equals
-
-li (is)
-
-
-
-Algebra
+## Algebra
 
 Algebra involves the study of symbols and the rules for manipulating these symbols.
 
-English
-
-Hîsyêô
-
-Literal Meaning
-
-Variable
-
-tûek zik
-
-Question number / Unknown number
-
-Constant
-
-tûek cizî
-
-Standing/Staying number
-
-Function
-
-ondo sôhoûk
-
-Logic preparation/process
-
-Graph
-
-toswîl sôhoûk
-
-Logic drawing
-
-To Solve
-
-fisun
-
-To know / Find out
+| English  | Hîsyêô        | Literal Meaning                  |
+|----------|---------------|----------------------------------|
+| Variable | tûek zik      | Question number / Unknown number |
+| Constant | tûek cizî     | Standing/Staying number          |
+| Function | ondo sôhoûk   | Logic preparation/process        |
+| Graph    | toswîl sôhoûk | Logic drawing                    |
+| To Solve | fisun         | To know / Find out               |
 
 Example Problem:
 Kûu fisun tûek zik (X).
@@ -145,97 +56,31 @@ Solve for X.
 Dûî xokôn tûek zik li dus.
 2 times X equals 10. (Answer: 5)
 
-Geometry (xîncûon)
+## Geometry
 
-Geometry deals with the properties of space and the forms that occupy it.
+Geometry (xîncûon) deals with the properties of space and the forms that occupy it.
 
-Fundamental Elements
+### Fundamental Elements
 
-English
+| English     | Hîsyêô                      | Description                             |
+|-------------|-----------------------------|-----------------------------------------|
+| Point / Dot | <HisyeoWord is='bindû'/>    | A specific location in space.           |
+| Line        | <HisyeoWord is='gîto'/>     | A connection between points.            |
+| Edge / Rim  | <HisyeoWord is='dînzoû'/>   | The boundary of a shape.                |
+| Straight    | <HisyeoWord is='mûstokîn'/> | Lacking curvature.                      |
+| Curved      | <HisyeoWord is='wonkûk'/>   | Bending or deviating from straightness. |
 
-Hîsyêô
+### Shapes & Solids
 
-Description
-
-Point / Dot
-
-bindû
-
-A specific location in space.
-
-Line
-
-gîto
-
-A connection between points.
-
-Edge / Rim
-
-dînzoû
-
-The boundary of a shape.
-
-Straight
-
-mûstokîn
-
-Lacking curvature.
-
-Curved
-
-wonkûk
-
-Bending or deviating from straightness.
-
-Shapes & Solids
-
-English
-
-Hîsyêô
-
-Description
-
-Triangle
-
-mûkônun
-
-A three-sided polygon.
-
-Circle / Ring
-
-wutun
-
-A continuous curved line equidistant from a center.
-
-Sphere
-
-gundolê
-
-A perfectly round 3D object.
-
-Block
-
-dîncî
-
-A solid object with flat faces (cube/rectangular prism).
-
-Tube
-
-môkôfo
-
-A hollow cylinder.
-
-Cone
-
-tohilôk
-
-A solid tapering to a point from a circular base.
-
-Pyramid
-
-cokwoli
-
-A structure with triangular outer surfaces.
+| English       | <HisyeoWord is='Hîsyêô'/>  | Description                                              |
+|---------------|----------------------------|----------------------------------------------------------|
+| Triangle      | <HisyeoWord is='mûkônun'/> | A three-sided polygon.                                   |
+| Circle / Ring | <HisyeoWord is='wutun'/>   | A continuous curved line equidistant from a center.      |
+| Sphere        | <HisyeoWord is='gundolê'/> | A perfectly round 3D object.                             |
+| Block         | <HisyeoWord is='dîncî'/>   | A solid object with flat faces (cube/rectangular prism). |
+| Tube          | <HisyeoWord is='môkôfo'/>  | A hollow cylinder.                                       |
+| Cone          | <HisyeoWord is='tohilôk'/> | A solid tapering to a point from a circular base.        |
+| Pyramid       | <HisyeoWord is='cokwoli'/> | A structure with triangular outer surfaces.              |
 
 Mûkônun fuî sôbo niswî.
 A triangle has three sides.
@@ -243,41 +88,18 @@ A triangle has three sides.
 Gîto mûstokîn li xôn eswen en gîto wonkûk.
 A straight line is better than a curved line.
 
-Describing Polygons
+### Describing Polygons
 
 For shapes that do not have a specific name, you can construct a descriptive name using xîncûon (shape) followed by the number of sobô (sides).
 
 Formula: xîncûon + [Number]
 
-English
-
-Hîsyêô
-
-Literal Meaning
-
-Pentagon
-
-xîncûon tîû
-
-Shape [of] five
-
-Hexagon
-
-xîncûon toû
-
-Shape [of] six
-
-Octagon
-
-xîncûon tukwos
-
-Shape [of] eight
-
-Polygon
-
-xîncûon sobô
-
-Shape [of] sides
+| English  | Hîsyêô         | Literal Meaning  |
+|----------|----------------|------------------|
+| Pentagon | xîncûon tîû    | Shape [of] five  |
+| Hexagon  | xîncûon toû    | Shape [of] six   |
+| Octagon  | xîncûon tukwos | Shape [of] eight |
+| Polygon  | xîncûon sobô   | Shape [of] sides |
 
 Xîncûon toû fuî sobô toû.
 A hexagon has six sides.
