FInish setting up math page

--- a/docs/sciences/mathematics.mdx
+++ b/docs/sciences/mathematics.mdx
@@ -16,45 +16,45 @@ Mathematics, or sôhoûk, is considered the language of the First Law—the unde
 
 ## Basic Vocabulary
 
-| English     | Hîsyêô       | Literal Meaning  |
-|-------------|--------------|------------------|
-| Number      | tûek         | Count / Number   |
-| Zero        | xûnyu        | Void / Nothing   |
-| Infinity    | môî          | All / Everything |
-| Equation    | wofok sôhoûk | Logic agreement  |
-| Shape       | xîncûon      | Form / Shape     |
-| Measurement | dûstu        | Measure / Degree |
+| English     | Hîsyêô       | Literal Meaning                        |
+|-------------|--------------|----------------------------------------|
+| Number      | mîkdol       | Amount / Number                        |
+| Zero        | xûnyu        | Void / Nothing                         |
+| Infinity    | sônsûs       | Endless / Infinite                     |
+| Equation    | wofok sôhoûk | Arithmetic proof                       |
+| Shape       | xîncûon      | Form / Shape                           |
+| Measurement | dûstu        | To measure (Verb) / Measurement (Noun) |
 
 ## Operations
 
 Operations are often expressed using prepositions or specific verbs.
 
-| Operation        | Hîsyêô       | Example (2 + 2 = 4)                               |
-|------------------|--------------|---------------------------------------------------|
-| Plus (Add)       | ûn (and)     | Dûî ûn dûî li nonkû.                              |
-| Minus (Subtract) | sûn (from)   | Dûî sûn nonkû li dûî. (Two from four is two).     |
-| Times (Multiply) | xokôn (each) | Dûî xokôn dûî li nonkû. (Two each two is four).   |
-| Divide           | fun (part)   | Dûî fun nonkû li dûî. (Two parts of four is two). |
-| Equals           | li (is)      |                                                   |
+| Operation        | Hîsyêô       | Example (2 + 2 = 4)                                                        |
+|------------------|--------------|----------------------------------------------------------------------------|
+| Plus (Add)       | ûn (and)     | <HisyeoText>dûî ûn dûî li nonkû.</HisyeoText>                              |
+| Minus (Subtract) | sûn (from)   | <HisyeoText>dûî sûn nonkû li dûî.</HisyeoText> (Two from four is two).     |
+| Times (Multiply) | xokôn (each) | <HisyeoText>dûî xokôn dûî li nonkû.</HisyeoText> (Two each two is four).   |
+| Divide           | fun (part)   | <HisyeoText>dûî fun nonkû li dûî.</HisyeoText> (Two parts of four is two). |
+| Equals           | li (is)      |                                                                            |
 
 ## Algebra
 
 Algebra involves the study of symbols and the rules for manipulating these symbols.
 
-| English  | Hîsyêô        | Literal Meaning                  |
-|----------|---------------|----------------------------------|
-| Variable | tûek zik      | Question number / Unknown number |
-| Constant | tûek cizî     | Standing/Staying number          |
-| Function | ondo sôhoûk   | Logic preparation/process        |
-| Graph    | toswîl sôhoûk | Logic drawing                    |
-| To Solve | fisun         | To know / Find out               |
+| English  | Hîsyêô           | Literal Meaning           |
+|----------|------------------|---------------------------|
+| Variable | mîkdol (des fisun) | Unknown number            |
+| Constant | mîkdol totsi     | Standing number           |
+| Function | ondo sôhoûk      | Arithmetic preparation    |
+| Graph    | toswîl sôhoûk    | Arithmetic drawing        |
+| To Solve | yosten           | To discover / To find out |
 
 Example Problem:
-Kûu fisun tûek zik (X).
-Solve for X.
 
-Dûî xokôn tûek zik li dus.
-2 times X equals 10. (Answer: 5)
+<HisyeoTabs>
+    <p>kûu yosten mîkdol dês fisun Xo.&emsp;<em>Solve for X.</em></p>
+    <p>dûî xokôn mîkdol Xo li dus. (zuwobû: tîû)&emsp;<em>2 times X equals 10. (Answer: 5)</em></p>
+</HisyeoTabs>
 
 ## Geometry
 
@@ -82,26 +82,26 @@ Geometry (xîncûon) deals with the properties of space and the forms that occup
 | Cone          | <HisyeoWord is='tohilôk'/> | A solid tapering to a point from a circular base.        |
 | Pyramid       | <HisyeoWord is='cokwoli'/> | A structure with triangular outer surfaces.              |
 
-Mûkônun fuî sôbo niswî.
-A triangle has three sides.
-
-Gîto mûstokîn li xôn eswen en gîto wonkûk.
-A straight line is better than a curved line.
+<HisyeoTabs>
+    <p>mûkônun fuî niswî sôbo.&emsp;<em>A triangle has three sides.</em></p>
+    <p>li xôn eswen û gîto mûstokîn en gîto wonkûk.&emsp;<em>A straight line is better than a curved line.</em></p>
+</HisyeoTabs>
 
 ### Describing Polygons
 
 For shapes that do not have a specific name, you can construct a descriptive name using xîncûon (shape) followed by the number of sobô (sides).
 
-Formula: xîncûon + [Number]
+Formula:&emsp;<HisyeoWord is='xîncûon'/>&emsp;<HisyeoWord is='yê'/>&emsp;+&emsp;[Number]&emsp;+&emsp;<HisyeoWord is='sobô'/>
 
 | English  | Hîsyêô         | Literal Meaning  |
 |----------|----------------|------------------|
-| Pentagon | xîncûon tîû    | Shape [of] five  |
-| Hexagon  | xîncûon toû    | Shape [of] six   |
-| Octagon  | xîncûon tukwos | Shape [of] eight |
-| Polygon  | xîncûon sobô   | Shape [of] sides |
+| Pentagon | xîncûon yê tîû sobô    | Shape of five sides  |
+| Hexagon  | xîncûon yê toû sobô    | Shape of six sides   |
+| Octagon  | xîncûon yê tukwos sobô | Shape of eight sides |
+| Polygon  | xîncûon yê êto sobô   | Shape of many sides |
 
-Xîncûon toû fuî sobô toû.
-A hexagon has six sides.
+<HisyeoTabs>
+    <p>xîncûon yê toû sobô fuî toû sobô.&emsp;<em>A hexagon has six sides.</em></p>
+</HisyeoTabs>
 
 <HisyeoTooltip/>
