Add politics page

--- a/docs/sciences/politics.mdx
+++ b/docs/sciences/politics.mdx
@@ -4,3 +4,117 @@ draft: true
 ---
 
 # Political Science
+
+Political Science is the study of <HisyeoWord is='kon'/> <HisyeoWord is='bôklôn'/> (governance/statecraft).
+In Hîsyêô, this discipline is inextricably linked to the theology of
+[Tîengûun](../religion/gods/tîêngûun) (Society) and the rejection of the [First
+Law](../religion/first-law) (Tyranny).
+
+## Core Concepts
+
+The fundamental question of Hîsyêô politics is not "Who rules?" but "How do we agree?"
+
+| English   | Hîsyêô                                   | Literal Meaning                   |
+|-----------|------------------------------------------|-----------------------------------|
+| Politics  | <HisyeoText>kon bôklôn</HisyeoText>      | Acts/Matters of Governing         |
+| To rule   | <HisyeoWord is='hûkun'/>                 | To command (Verb) / Orders (Noun) |
+| Power     | <HisyeoWord is='ûlzo'/>                  | Energy / Power                    |
+| Freedom   | <HisyeoWord is='fôlnî'/>                 | Freeness                          |
+| Justice   | <HisyeoWord is='ûsowo'/>                 | Fairness / Balance / Equity       |
+| Law       | <HisyeoWord is='fûtsûn'/>                | To obey (Verb) / Laws (Noun)      |
+| Consensus | <HisyeoText>wofok zomo mûlû</HisyeoText> | Whole Group agreement             |
+| Anarchy   | <HisyeoText>kon dês hûkun</HisyeoText>   | Acts/Matters of Unorderableness   |
+
+## Systems of Governance
+
+Hîsyêô vocabulary distinguishes between hierarchical systems (Shards) and
+horizontal systems (Weaves).
+
+### Hierarchical Systems (The Shards)
+
+- **Monarchy:** <HisyeoText>kon bôklôn yê kut</HisyeoText> (Governance of one)
+- **Oligarchy:** <HisyeoText>kon bôklôn yê yoûtî</HisyeoText> (Governance of a few)
+- **Empire:** <HisyeoText>kûôcyo cênbô</HisyeoText> (Big nation/state)
+- **Tyranny:** <HisyeoText>odigon ûlzo</HisyeoText> (Excessive power)
+
+### Horizontal Systems (The Weave)
+
+- **Democracy:** <HisyeoText>kon bôklôn yê môî</HisyeoText> (Rule of all)
+- **Republic:** <HisyeoText>kûôcyo yê umo</HisyeoText> (Nation of the people)
+- **Federation:** <HisyeoText>mozulis kûngîyo</HisyeoText> (Nation council)
+- **Commune:** <HisyeoText>niwos fîmôsyôs</HisyeoText> (Communal residence)
+
+### Participatory Economics & Politics
+
+Hîsyêô culture advocates for a system known as Participatory Economics (ParEcon)
+and Participatory Politics (ParPolity). This system seeks to maintain individual
+autonomy and market efficiency without the corruption of capitalism or the
+authoritarianism of central planning.
+
+#### The Problem with the Invisible Hand
+
+In Hîsyêô philosophy, the "Invisible Hand" of capitalism is seen as a Shard—a
+remnant of the First Law that prioritizes profit (accumulation) over people
+(multiplicity). It creates a hierarchy where the market dictates the value of a
+life.
+
+#### The Solution: Participatory Planning
+
+Instead of an invisible hand, Hîsyêô uses the Visible Hand of
+Tîengûun—conscious, collective planning.
+
+- **Participatory Planning:** <HisyeoText>kon yôcno zomo</HisyeoText> (Group
+  planning). Producers and consumers negotiate directly to determine what is
+  produced, ensuring that supply meets need without waste or exploitation.
+- **Social Ownership:** <HisyeoText>fuî fîmôsyôs</HisyeoText> (Communal
+  ownership). The means of production (factories, land) are owned by the
+  community as a whole, preventing the rise of a capitalist class.
+- **Self-Management:** <HisyeoText>kon hûkun cizî</HisyeoText> (Self-rule). Every
+  worker has a say in the decisions that affect their work, proportional to how
+  much they are affected.
+- **Remuneration for Effort:** <HisyeoText>cifû fun mêdûson</HisyeoText> (Pay
+  per effort). People are paid based on the effort and sacrifice of their labor,
+  not on the value of their property or genetic luck.
+
+<HisyeoTabs>
+    <p>nûs li êo yôcno til yôûlî yê môî til yôk wîlûwo în gomî yê kut.&emsp;<em>We plan for the benefit of all, not for the profit of one.</em></p>
+</HisyeoTabs>
+
+### Political Actors
+
+| English      | Hîsyêô                             | Literal Meaning    |
+|--------------|------------------------------------|--------------------|
+| Citizen      | <HisyeoText>kukwon zomî</HisyeoText> | Society Member    |
+| Leader       | <HisyeoText>ônî obûlû</HisyeoText> | The guiding one       |
+| Ruler / King | <HisyeoText>ônî hûkun</HisyeoText> | The ruling one     |
+| Council      | <HisyeoWord is='mozulis'/>         | Council / Assembly |
+| Activist     | <HisyeoText>ônî fôlnî</HisyeoText> | The free one    |
+
+### The Process of Consensus (Tîengûun)
+
+In Hîsyêô culture, decision-making follows a cycle of Consensus rather than simple voting (which is seen as the tyranny of the majority).
+
+- **Proposal:** <HisyeoText>yôcno nêôs</HisyeoText> (New plan)
+- **Discussion:** <HisyeoText>kon kôto</HisyeoText> (Speech/Dialogue)
+- **Dissent:** <HisyeoText>bêsnêhot în kôntêsto</HisyeoText> (Opposing suggestions)
+- **Agreement:** <HisyeoWord is='wofok'/>
+
+<HisyeoTabs>
+    <p>nûs kôs wofok yê yoldûn til môî.&emsp;<em>We make agreements to help everyone.</em></p>
+</HisyeoTabs>
+
+### International Relations
+
+Describing the interactions between groups.
+
+War: <HisyeoWord is='gûexo'/> (Conflict/War)
+Peace: <HisyeoWord is='sontî'/> (Calmness)
+Foreigner: <HisyeoText>ônî bolutê</HisyeoText> (The foreign one)
+Treaty: <HisyeoText>golo yê wofok</HisyeoText> (Document of agreements)
+Border: <HisyeoText>eloi kûôcyo</HisyeoText> (Nation/State boundary)
+
+<HisyeoTabs>
+    <p>li xôn eswen û sontî en gûexo.&emsp;<em>Peace is better than war.</em></p>
+</HisyeoTabs>
+
+<HisyeoTooltip />
