Add history page and fix missing imports on politics page

--- a/docs/sciences/history.mdx
+++ b/docs/sciences/history.mdx
@@ -3,4 +3,119 @@ sidebar_position: 16
 draft: true
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
+
 # History
+
+History (<HisyeoWord is='itihos'/>) is the study of events (<HisyeoWord is='sîkîn'/>) and
+the preservation of memory (<HisyeoWord is='hûsku'/>). In Hîsyêô, history is not
+viewed as a linear "march of progress" but as a radial accumulation of
+experience within the [Great Weave](../religion/great-weave).
+
+## Core Concepts
+
+The fundamental task of the historian is to recover the threads that tyranny has attempted to cut.
+
+| English | Hîsyêô                                     | Literal Meaning                    |
+|---------|--------------------------------------------|------------------------------------|
+| History | <HisyeoWord is='itihos'/>                  |                                    |
+| Event   | <HisyeoWord is='sîkîn'/>                   | Happening / Event                  |
+| Memory  | <HisyeoWord is='hûsku'/>                   | To remember (Verb) / Memory (Noun) |
+| Archive | <HisyeoText>sêdu itihos</HisyeoText>       | History station                    |
+| Past    | <HisyeoText>ôhêl</HisyeoText>              |                                    |
+| Ancient | <HisyeoWord is='osyen'/>                   |                                    |
+| Myth    | <HisyeoText>kîso sonkon osyen</HisyeoText> | Ancient important story            |
+
+## The Radial Metaphor of Time
+
+Because Hîsyêô views time as **growth** (like tree rings), historical eras are
+described by their *depth*.
+
+- **Recent History:** <HisyeoText>itihos dohîl</HisyeoText>
+- **Ancient History:** <HisyeoText>itihos zîlyoîs</HisyeoText>
+- **Prehistory:** <HisyeoText>wokût xe ilik itihos</HisyeoText> (Time before history)
+
+<HisyeoTabs>
+    <p>nûs fohoso bi lîmîen til xe fisun ôhêl zîlyoîs.&emsp;<em>We look inward (back) to know the deep past.</em></p>
+</HisyeoTabs>
+
+## Historical Methods
+
+The historian (<HisyeoWord is='ônî'/> <HisyeoWord is='itihos'/>) uses specific tools to uncover the truth.
+
+| English      | Hîsyêô                                      | Literal Meaning          |
+|--------------|---------------------------------------------|--------------------------|
+| Archaeology  | <HisyeoText>bêûdo yê uyo osyen</HisyeoText> | Study of ancient objects |
+| Artifact     | <HisyeoText>uyo osyen</HisyeoText>          | Ancient object           |
+| Oral History | <HisyeoText>itihos în kôto</HisyeoText>     | Spoken history           |
+| Record       | <HisyeoText>tômôs itihos</HisyeoText>       | Historical book          |
+| Truth        | <HisyeoWord is='hokîkî'/>                   | Authenticness            |
+
+### The Shards of History
+
+Hîsyêô historians pay special attention to the [Shards](../religion/shattering#the-shards)—the moments of tyranny, war, and oppression. We study them not to glorify the victors, but to remember the victims and prevent the First Law from re-emerging.
+
+<HisyeoTabs>
+    <p>nûs bêûdo gûexo til xe ondo sontî.&emsp;<em>We study war to prepare peace.</em></p>
+</HisyeoTabs>
+
+## Materialist Historiography
+
+Hîsyêô history is organized not by the rise and fall of kings, but by the struggle of the worker against hierarchy.
+
+### Year One: The First International
+
+<HisyeoTabs>
+    <p>ûsên yê mozulis nucoto kut</p>
+</HisyeoTabs>
+
+**Hîsyêô Year:** 1
+
+**Gregorian Year:** 1864 CE
+
+This year marks the founding of the International Workingmen's Association (IWA) in London. It is recognized as the first time humans formally attempted to coordinate a global resistance across borders, directly channeling the spirit of Tîengûun (Solidarity) and Îfêstôs (Labor).
+
+**Current Year (2025 CE):** 162 CM (cihôû mozulis nucoto kut)
+
+### The Four Ages
+
+After truly ancient history (2375 IM and earlier), the record of humanity is divided into four broad eras defined by their mode of production and control. Dates are given in IM (<HisyeoWord is='ilik'/> <HisyeoWord is='mozulis'/> - Before the Meeting) and CM (<HisyeoWord is='cihôû'/> <HisyeoWord is='mozulis'/> - After the Meeting).
+
+1. **The Age of Cities:**
+
+<HisyeoTabs><p>wokût yê sinsî</p></HisyeoTabs>
+
+**Approximate Period:** 2374 IM (500 BCE) - 1994 IM (130 BCE)
+
+**Definition:** The classical era of city-states, early republics, and the first philosophical attempts to understand the nature of the citizen. It is marked by the tension between the polis (community) and the rise of empire.
+
+2. **The Age of Kings:**
+
+<HisyeoTabs><p>wokût yê ônî hûkun</p></HisyeoTabs>
+
+**Approximate Period:** 1995 IM (130 BCE) - 163 IM (1700 CE)
+
+**Definition:** The long era of feudalism, absolute monarchy, and religious orthodoxy. Power was centralized in single individuals who claimed divine right, solidifying the hierarchy of the First Law across the globe.
+
+3. **The Age of Capital:**
+
+<HisyeoTabs><p>wokût yê munî</p></HisyeoTabs>
+
+**Approximate Period:** 164 IM (1700 CE) - 1 IM (1863 CE)
+
+**Definition:** The era of capitalism, industrialization, and the nation-state. Power shattered into competing markets and colonial empires, creating a chaotic hierarchy of wealth that replaced the hierarchy of blood.
+
+4. **The Age of Participation:**
+
+<HisyeoTabs><p>wokût yê kotilmok</p></HisyeoTabs>
+
+**Approximate Period:** 1 CM (1864 CE) - Present
+
+**Definition:** The modern era, defined by the rise of labor movements, international solidarity, and the ongoing struggle to build a post-capitalist world. It is the age where the Weave begins to re-form through voluntary association.
+
+<HisyeoTooltip />
