--- a/docs/sciences/politics.mdx
+++ b/docs/sciences/politics.mdx
@@ -3,6 +3,13 @@ sidebar_position: 15
 draft: true
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
+
 # Political Science
 
 Political Science is the study of <HisyeoWord is='kon'/> <HisyeoWord is='bôklôn'/> (governance/statecraft).
