Add technology page

--- a/docs/sciences/technology.mdx
+++ b/docs/sciences/technology.mdx
@@ -3,4 +3,96 @@ sidebar_position: 17
 draft: true
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
+
 # Technology
+
+Technology is the study of <HisyeoWord is='kuûnmê'/> (machinery/tech) and the application of <HisyeoWord is='yôn'/> (tools). In Hîsyêô, technology is the domain of [Unonsî](../religion/gods/unonsî), the god of potentiality and invention.
+
+## Core Concepts
+
+Technology is not seen as a force that happens to us, but as a set of levers we use to move the world.
+
+| English    | Hîsyêô                     | Literal Meaning                       |
+|------------|----------------------------|---------------------------------------|
+| Technology | <HisyeoWord is='kuûnmê'/>  |                                       |
+| Tool       | <HisyeoWord is='yôn'/>     | To use (Verb) / Tool (Noun)           |
+| Machine    | <HisyeoWord is='culono'/>  | To operator (Verb) / Mechanism (Noun) |
+| Invention  | <HisyeoWord is='tifûlci'/> |                                       |
+| Repair     | <HisyeoWord is='xîûfû'/>   |                                       |
+| System     | <HisyeoWord is='bobôun'/>  |                                       |
+
+## The Philosophy of the Lever
+
+The symbol of Hîsyêô technology is the <HisyeoWord is='lûcku'/> (lever). A tool is defined by its ability to multiply force.
+
+<HisyeoTabs>
+    <p>ôtsôtot Unonsî cûdo lûcku til xe li êo nô ôlê nucoto.&emsp;<em>Unonsî gives a lever to move the world.</em></p>
+</HisyeoTabs>
+
+This philosophy emphasizes **user agency** and **repairability**. A tool you cannot fix is a [Shard](../religion/shattering#the-shards) (a form of control), not a true tool.
+
+## Computing & The Digital Weave
+
+The digital world is viewed as a reflection of the Great Weave—a network of connection.
+
+| English         | Hîsyêô                                  | Literal Meaning                |
+|-----------------|-----------------------------------------|--------------------------------|
+| Computer        | <HisyeoText>ônî tûek</HisyeoText>       | The counting one / Calculator  |
+| Internet        | <HisyeoText>nec nucoto</HisyeoText>     | World net                      |
+| Software / Code | <HisyeoWord is='yôcno'/>                | Program / Plan                 |
+| Data            | <HisyeoText>sobis</HisyeoText>          | To record (Verb) / Data (Noun) |
+| Screen          | <HisyeoText>ônî mônîso</HisyeoText>     | The displaying one             |
+| Robot / AI      | <HisyeoText>culono dûuncît</HisyeoText> | Mind machine                   |
+
+### Programming
+
+Coding is described as weaving logic (môtsilê sôhoûk).
+
+Noyo cukto wofok til xe hûkun culono.
+I write code to command the machine.
+
+## Energy & Power
+
+Hîsyêô culture favors Solarpunk aesthetics—high technology integrated with nature.
+
+**Electricity:** <HisyeoWord is='cingî'/> (Lightning/Energy)
+
+**Battery:** <HisyeoText>dibo ûlzo cingî</HisyeoText> (Electrical energy container)
+
+**Solar Power:** <HisyeoText>cingî yê bînton lono</HisyeoText> (Energy of the day star)
+
+**Wind Power:** <HisyeoText>cingî woyû</HisyeoText> (Wind energy)
+
+## Transportation
+
+Vehicles are described by their medium of travel.
+
+| English       | Hîsyêô                               | Literal Meaning                        |
+|---------------|--------------------------------------|----------------------------------------|
+| Car / Vehicle | <HisyeoWord is='oûtô'/>              | To steer/drive (Verb) / Vehicle (Noun) |
+| Bicycle       | <HisyeoText>oûtô gîsgûl</HisyeoText> | Pedal vehicle                          |
+| Train         | <HisyeoText>oûtô kîskô</HisyeoText>  | Rail vehicle                           |
+| Airplane      | <HisyeoText>oûtô xîkô</HisyeoText>   | Flying vehicle                         |
+| Boat / Ship   | <HisyeoText>oûtô xîmu</HisyeoText>   | Water vehicle                          |
+
+## The Maker Ethos
+
+To honor [Îfêstôs](../religion/gods/îfêstôs) (Labor), one must not just use technology, but understand and maintain it.
+
+To Build: <HisyeoWord is='kôson'/>
+
+To Make Designs: <HisyeoWord is='kôs'/> <HisyeoWord is='yôcno'/>
+
+To Fix: <HisyeoWord is='xîûfû'/>
+
+<HisyeoTabs>
+    <p>li xôn eswen û xe xîûfû en xe wedo ônî kobût.&emsp;<em>It is better to repair than to exchange a broken one.</em></p>
+</HisyeoTabs>
+
+<HisyeoTooltip />
